crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F507_F50x.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: PercentFormatPositionalCountMismatch
      body: "`%`-format string has 2 placeholder(s) but 1 substitution(s)"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: PercentFormatPositionalCountMismatch
      body: "`%`-format string has 2 placeholder(s) but 3 substitution(s)"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 19
    fix: ~
    parent: ~

