crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F521_F521.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F521.py:1:1: F521 `.format` call has invalid format string: Single '{' encountered in format string
  |
1 | "{".format(1)
  | ^^^^^^^^^^^^^ F521
2 | "}".format(1)
3 | "{foo[}".format(foo=1)
  |

./resources/test/fixtures/pyflakes/F521.py:2:1: F521 `.format` call has invalid format string: Single '}' encountered in format string
  |
2 | "{".format(1)
3 | "}".format(1)
  | ^^^^^^^^^^^^^ F521
4 | "{foo[}".format(foo=1)
5 | # too much string recursion (placeholder-in-placeholder)
  |

./resources/test/fixtures/pyflakes/F521.py:3:1: F521 `.format` call has invalid format string: Expected '}' before end of string
  |
3 | "{".format(1)
4 | "}".format(1)
5 | "{foo[}".format(foo=1)
  | ^^^^^^^^^^^^^^^^^^^^^^ F521
6 | # too much string recursion (placeholder-in-placeholder)
7 | "{:{:{}}}".format(1, 2, 3)
  |

./resources/test/fixtures/pyflakes/F521.py:5:1: F521 `.format` call has invalid format string: Max string recursion exceeded
  |
5 | "{foo[}".format(foo=1)
6 | # too much string recursion (placeholder-in-placeholder)
7 | "{:{:{}}}".format(1, 2, 3)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^ F521
8 | # ruff picks these issues up, but flake8 doesn't
9 | "{foo[]}".format(foo={"": 1})
  |

./resources/test/fixtures/pyflakes/F521.py:7:1: F521 `.format` call has invalid format string: Empty attribute in format string
   |
 7 | "{:{:{}}}".format(1, 2, 3)
 8 | # ruff picks these issues up, but flake8 doesn't
 9 | "{foo[]}".format(foo={"": 1})
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ F521
10 | "{foo..}".format(foo=1)
11 | "{foo..bar}".format(foo=1)
   |

./resources/test/fixtures/pyflakes/F521.py:8:1: F521 `.format` call has invalid format string: Empty attribute in format string
   |
 8 | # ruff picks these issues up, but flake8 doesn't
 9 | "{foo[]}".format(foo={"": 1})
10 | "{foo..}".format(foo=1)
   | ^^^^^^^^^^^^^^^^^^^^^^^ F521
11 | "{foo..bar}".format(foo=1)
   |

./resources/test/fixtures/pyflakes/F521.py:9:1: F521 `.format` call has invalid format string: Empty attribute in format string
   |
 9 | "{foo[]}".format(foo={"": 1})
10 | "{foo..}".format(foo=1)
11 | "{foo..bar}".format(foo=1)
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ F521
12 | 
13 | # The following are all "good" uses of .format
   |


