crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F524_F524.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
expression: diagnostics
---
- - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): 1"
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 17
    fix: ~
    parent: ~
  - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): 2"
      suggestion: ~
      fixable: false
    location:
      row: 2
      column: 0
    end_location:
      row: 2
      column: 14
    fix: ~
    parent: ~
  - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): bar"
      suggestion: ~
      fixable: false
    location:
      row: 3
      column: 0
    end_location:
      row: 3
      column: 16
    fix: ~
    parent: ~
  - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): bar"
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 0
    end_location:
      row: 4
      column: 21
    fix: ~
    parent: ~
  - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): 0, bar"
      suggestion: ~
      fixable: false
    location:
      row: 5
      column: 0
    end_location:
      row: 5
      column: 20
    fix: ~
    parent: ~
  - kind:
      name: StringDotFormatMissingArguments
      body: "`.format` call is missing argument(s) for placeholder(s): 0, bar"
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 0
    end_location:
      row: 6
      column: 20
    fix: ~
    parent: ~

