crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F525_F525.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F525.py:1:1: F525 `.format` string mixes automatic and manual numbering
  |
1 | "{} {1}".format(1, 2)  # F525
  | ^^^^^^^^^^^^^^^^^^^^^ F525
2 | "{0} {}".format(1, 2)  # F523, F525
  |

./resources/test/fixtures/pyflakes/F525.py:2:1: F525 `.format` string mixes automatic and manual numbering
  |
2 | "{} {1}".format(1, 2)  # F525
3 | "{0} {}".format(1, 2)  # F523, F525
  | ^^^^^^^^^^^^^^^^^^^^^ F525
  |


