crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F541_F541.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
F541.py:6:5: F541 [*] f-string without any placeholders
  |
5 | # Errors
6 | c = f"def"
  |     ^^^^^^ F541
7 | d = f"def" + "ghi"
8 | e = (
  |
  = help: Remove extraneous `f` prefix

ℹ Fix
3 3 | b = f"ghi{'jkl'}"
4 4 | 
5 5 | # Errors
6   |-c = f"def"
  6 |+c = "def"
7 7 | d = f"def" + "ghi"
8 8 | e = (
9 9 |     f"def" +

F541.py:7:5: F541 [*] f-string without any placeholders
  |
5 | # Errors
6 | c = f"def"
7 | d = f"def" + "ghi"
  |     ^^^^^^ F541
8 | e = (
9 |     f"def" +
  |
  = help: Remove extraneous `f` prefix

ℹ Fix
4 4 | 
5 5 | # Errors
6 6 | c = f"def"
7   |-d = f"def" + "ghi"
  7 |+d = "def" + "ghi"
8 8 | e = (
9 9 |     f"def" +
10 10 |     "ghi"

F541.py:9:5: F541 [*] f-string without any placeholders
   |
 7 | d = f"def" + "ghi"
 8 | e = (
 9 |     f"def" +
   |     ^^^^^^ F541
10 |     "ghi"
11 | )
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
6  6  | c = f"def"
7  7  | d = f"def" + "ghi"
8  8  | e = (
9     |-    f"def" +
   9  |+    "def" +
10 10 |     "ghi"
11 11 | )
12 12 | f = (

F541.py:13:5: F541 [*] f-string without any placeholders
   |
11 | )
12 | f = (
13 |     f"a"
   |     ^^^^ F541
14 |     F"b"
15 |     "c"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
10 10 |     "ghi"
11 11 | )
12 12 | f = (
13    |-    f"a"
   13 |+    "a"
14 14 |     F"b"
15 15 |     "c"
16 16 |     rf"d"

F541.py:14:5: F541 [*] f-string without any placeholders
   |
12 | f = (
13 |     f"a"
14 |     F"b"
   |     ^^^^ F541
15 |     "c"
16 |     rf"d"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
11 11 | )
12 12 | f = (
13 13 |     f"a"
14    |-    F"b"
   14 |+    "b"
15 15 |     "c"
16 16 |     rf"d"
17 17 |     fr"e"

F541.py:16:5: F541 [*] f-string without any placeholders
   |
14 |     F"b"
15 |     "c"
16 |     rf"d"
   |     ^^^^^ F541
17 |     fr"e"
18 | )
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
13 13 |     f"a"
14 14 |     F"b"
15 15 |     "c"
16    |-    rf"d"
   16 |+    r"d"
17 17 |     fr"e"
18 18 | )
19 19 | g = f""

F541.py:17:5: F541 [*] f-string without any placeholders
   |
15 |     "c"
16 |     rf"d"
17 |     fr"e"
   |     ^^^^^ F541
18 | )
19 | g = f""
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
14 14 |     F"b"
15 15 |     "c"
16 16 |     rf"d"
17    |-    fr"e"
   17 |+    r"e"
18 18 | )
19 19 | g = f""
20 20 | 

F541.py:19:5: F541 [*] f-string without any placeholders
   |
17 |     fr"e"
18 | )
19 | g = f""
   |     ^^^ F541
20 | 
21 | # OK
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
16 16 |     rf"d"
17 17 |     fr"e"
18 18 | )
19    |-g = f""
   19 |+g = ""
20 20 | 
21 21 | # OK
22 22 | g = f"ghi{123:{45}}"

F541.py:25:13: F541 [*] f-string without any placeholders
   |
24 | # Error
25 | h = "x" "y" f"z"
   |             ^^^^ F541
26 | 
27 | v = 23.234234
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
22 22 | g = f"ghi{123:{45}}"
23 23 | 
24 24 | # Error
25    |-h = "x" "y" f"z"
   25 |+h = "x" "y" "z"
26 26 | 
27 27 | v = 23.234234
28 28 | 

F541.py:34:7: F541 [*] f-string without any placeholders
   |
33 | # Errors
34 | f"{v:{f'0.2f'}}"
   |       ^^^^^^^ F541
35 | f"{f''}"
36 | f"{{test}}"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
31 31 | f"{f'{v:0.2f}'}"
32 32 | 
33 33 | # Errors
34    |-f"{v:{f'0.2f'}}"
   34 |+f"{v:{'0.2f'}}"
35 35 | f"{f''}"
36 36 | f"{{test}}"
37 37 | f'{{ 40 }}'

F541.py:35:4: F541 [*] f-string without any placeholders
   |
33 | # Errors
34 | f"{v:{f'0.2f'}}"
35 | f"{f''}"
   |    ^^^ F541
36 | f"{{test}}"
37 | f'{{ 40 }}'
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
32 32 | 
33 33 | # Errors
34 34 | f"{v:{f'0.2f'}}"
35    |-f"{f''}"
   35 |+f"{''}"
36 36 | f"{{test}}"
37 37 | f'{{ 40 }}'
38 38 | f"{{a {{x}}"

F541.py:36:1: F541 [*] f-string without any placeholders
   |
34 | f"{v:{f'0.2f'}}"
35 | f"{f''}"
36 | f"{{test}}"
   | ^^^^^^^^^^^ F541
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
33 33 | # Errors
34 34 | f"{v:{f'0.2f'}}"
35 35 | f"{f''}"
36    |-f"{{test}}"
   36 |+"{test}"
37 37 | f'{{ 40 }}'
38 38 | f"{{a {{x}}"
39 39 | f"{{{{x}}}}"

F541.py:37:1: F541 [*] f-string without any placeholders
   |
35 | f"{f''}"
36 | f"{{test}}"
37 | f'{{ 40 }}'
   | ^^^^^^^^^^^ F541
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
34 34 | f"{v:{f'0.2f'}}"
35 35 | f"{f''}"
36 36 | f"{{test}}"
37    |-f'{{ 40 }}'
   37 |+'{ 40 }'
38 38 | f"{{a {{x}}"
39 39 | f"{{{{x}}}}"
40 40 | ""f""

F541.py:38:1: F541 [*] f-string without any placeholders
   |
36 | f"{{test}}"
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
   | ^^^^^^^^^^^^ F541
39 | f"{{{{x}}}}"
40 | ""f""
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
35 35 | f"{f''}"
36 36 | f"{{test}}"
37 37 | f'{{ 40 }}'
38    |-f"{{a {{x}}"
   38 |+"{a {x}"
39 39 | f"{{{{x}}}}"
40 40 | ""f""
41 41 | ''f""

F541.py:39:1: F541 [*] f-string without any placeholders
   |
37 | f'{{ 40 }}'
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
   | ^^^^^^^^^^^^ F541
40 | ""f""
41 | ''f""
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
36 36 | f"{{test}}"
37 37 | f'{{ 40 }}'
38 38 | f"{{a {{x}}"
39    |-f"{{{{x}}}}"
   39 |+"{{x}}"
40 40 | ""f""
41 41 | ''f""
42 42 | (""f""r"")

F541.py:40:3: F541 [*] f-string without any placeholders
   |
38 | f"{{a {{x}}"
39 | f"{{{{x}}}}"
40 | ""f""
   |   ^^^ F541
41 | ''f""
42 | (""f""r"")
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
37 37 | f'{{ 40 }}'
38 38 | f"{{a {{x}}"
39 39 | f"{{{{x}}}}"
40    |-""f""
   40 |+"" ""
41 41 | ''f""
42 42 | (""f""r"")
43 43 | f"{v:{f"0.2f"}}"

F541.py:41:3: F541 [*] f-string without any placeholders
   |
39 | f"{{{{x}}}}"
40 | ""f""
41 | ''f""
   |   ^^^ F541
42 | (""f""r"")
43 | f"{v:{f"0.2f"}}"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
38 38 | f"{{a {{x}}"
39 39 | f"{{{{x}}}}"
40 40 | ""f""
41    |-''f""
   41 |+''""
42 42 | (""f""r"")
43 43 | f"{v:{f"0.2f"}}"
44 44 | 

F541.py:42:4: F541 [*] f-string without any placeholders
   |
40 | ""f""
41 | ''f""
42 | (""f""r"")
   |    ^^^ F541
43 | f"{v:{f"0.2f"}}"
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
39 39 | f"{{{{x}}}}"
40 40 | ""f""
41 41 | ''f""
42    |-(""f""r"")
   42 |+("" ""r"")
43 43 | f"{v:{f"0.2f"}}"
44 44 | 
45 45 | # To be fixed

F541.py:43:7: F541 [*] f-string without any placeholders
   |
41 | ''f""
42 | (""f""r"")
43 | f"{v:{f"0.2f"}}"
   |       ^^^^^^^ F541
44 | 
45 | # To be fixed
   |
   = help: Remove extraneous `f` prefix

ℹ Fix
40 40 | ""f""
41 41 | ''f""
42 42 | (""f""r"")
43    |-f"{v:{f"0.2f"}}"
   43 |+f"{v:{"0.2f"}}"
44 44 | 
45 45 | # To be fixed
46 46 | # Error: f-string: single '}' is not allowed at line 41 column 8


