crates/ruff/src/rules/pyflakes/snapshots/ruff__rules__pyflakes__tests__F602_F602.py.snap
---
source: crates/ruff/src/rules/pyflakes/mod.rs
---
./resources/test/fixtures/pyflakes/F602.py:5:5: F602 Dictionary key `a` repeated
  |
5 | x = {
6 |     a: 1,
7 |     a: 2,
  |     ^ F602
8 |     b: 3,
9 | }
  |

./resources/test/fixtures/pyflakes/F602.py:11:5: F602 Dictionary key `a` repeated
   |
11 | x = {
12 |     a: 1,
13 |     a: 2,
   |     ^ F602
14 |     a: 3,
15 |     a: 3,
   |

./resources/test/fixtures/pyflakes/F602.py:12:5: F602 Dictionary key `a` repeated
   |
12 |     a: 1,
13 |     a: 2,
14 |     a: 3,
   |     ^ F602
15 |     a: 3,
16 | }
   |

./resources/test/fixtures/pyflakes/F602.py:13:5: F602 [*] Dictionary key `a` repeated
   |
13 |     a: 2,
14 |     a: 3,
15 |     a: 3,
   |     ^ F602
16 | }
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
10 10 |     a: 1,
11 11 |     a: 2,
12 12 |     a: 3,
13    |-    a: 3,
14 13 | }
15 14 | 
16 15 | x = {

./resources/test/fixtures/pyflakes/F602.py:18:5: F602 Dictionary key `a` repeated
   |
18 | x = {
19 |     a: 1,
20 |     a: 2,
   |     ^ F602
21 |     a: 3,
22 |     a: 3,
   |

./resources/test/fixtures/pyflakes/F602.py:19:5: F602 Dictionary key `a` repeated
   |
19 |     a: 1,
20 |     a: 2,
21 |     a: 3,
   |     ^ F602
22 |     a: 3,
23 |     a: 4,
   |

./resources/test/fixtures/pyflakes/F602.py:20:5: F602 [*] Dictionary key `a` repeated
   |
20 |     a: 2,
21 |     a: 3,
22 |     a: 3,
   |     ^ F602
23 |     a: 4,
24 | }
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
17 17 |     a: 1,
18 18 |     a: 2,
19 19 |     a: 3,
20    |-    a: 3,
21 20 |     a: 4,
22 21 | }
23 22 | 

./resources/test/fixtures/pyflakes/F602.py:21:5: F602 Dictionary key `a` repeated
   |
21 |     a: 3,
22 |     a: 3,
23 |     a: 4,
   |     ^ F602
24 | }
   |

./resources/test/fixtures/pyflakes/F602.py:26:5: F602 [*] Dictionary key `a` repeated
   |
26 | x = {
27 |     a: 1,
28 |     a: 1,
   |     ^ F602
29 |     a: 2,
30 |     a: 3,
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
23 23 | 
24 24 | x = {
25 25 |     a: 1,
26    |-    a: 1,
27 26 |     a: 2,
28 27 |     a: 3,
29 28 |     a: 4,

./resources/test/fixtures/pyflakes/F602.py:27:5: F602 Dictionary key `a` repeated
   |
27 |     a: 1,
28 |     a: 1,
29 |     a: 2,
   |     ^ F602
30 |     a: 3,
31 |     a: 4,
   |

./resources/test/fixtures/pyflakes/F602.py:28:5: F602 Dictionary key `a` repeated
   |
28 |     a: 1,
29 |     a: 2,
30 |     a: 3,
   |     ^ F602
31 |     a: 4,
32 | }
   |

./resources/test/fixtures/pyflakes/F602.py:29:5: F602 Dictionary key `a` repeated
   |
29 |     a: 2,
30 |     a: 3,
31 |     a: 4,
   |     ^ F602
32 | }
   |

./resources/test/fixtures/pyflakes/F602.py:35:5: F602 [*] Dictionary key `a` repeated
   |
35 |     a: 1,
36 |     "a": 1,
37 |     a: 1,
   |     ^ F602
38 |     "a": 2,
39 |     a: 2,
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
32 32 | x = {
33 33 |     a: 1,
34 34 |     "a": 1,
35    |-    a: 1,
36 35 |     "a": 2,
37 36 |     a: 2,
38 37 |     "a": 3,

./resources/test/fixtures/pyflakes/F602.py:37:5: F602 Dictionary key `a` repeated
   |
37 |     a: 1,
38 |     "a": 2,
39 |     a: 2,
   |     ^ F602
40 |     "a": 3,
41 |     a: 3,
   |

./resources/test/fixtures/pyflakes/F602.py:39:5: F602 Dictionary key `a` repeated
   |
39 |     a: 2,
40 |     "a": 3,
41 |     a: 3,
   |     ^ F602
42 |     "a": 3,
43 |     a: 4,
   |

./resources/test/fixtures/pyflakes/F602.py:41:5: F602 Dictionary key `a` repeated
   |
41 |     a: 3,
42 |     "a": 3,
43 |     a: 4,
   |     ^ F602
44 | }
   |

./resources/test/fixtures/pyflakes/F602.py:44:12: F602 [*] Dictionary key `a` repeated
   |
44 | }
45 | 
46 | x = {a: 1, a: 1}
   |            ^ F602
47 | x = {a: 1, b: 2, a: 1}
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
41 41 |     a: 4,
42 42 | }
43 43 | 
44    |-x = {a: 1, a: 1}
   44 |+x = {a: 1}
45 45 | x = {a: 1, b: 2, a: 1}

./resources/test/fixtures/pyflakes/F602.py:45:18: F602 [*] Dictionary key `a` repeated
   |
45 | x = {a: 1, a: 1}
46 | x = {a: 1, b: 2, a: 1}
   |                  ^ F602
   |
   = help: Remove repeated key `a`

ℹ Suggested fix
42 42 | }
43 43 | 
44 44 | x = {a: 1, a: 1}
45    |-x = {a: 1, b: 2, a: 1}
   45 |+x = {a: 1, b: 2}


